switch and emoji added